	Rev 7292
	* objs/animate.cc,usecode/intrinsics.cc: Fixed bug #3601382 "Open book sound
	  happens when closing book" by forcing sounds played from usecode to begin
	  playing right away. Eliminated some warnings.
	Rev 7293
	* exult.cc: Fixed bug #3601383 "Avatar stuck in casting spell pose after
	  casting", a regression introduced in rev #7271. Eliminating warnings.

2013-01-17	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Fix crash when a party member dies due to a trap

2013-01-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/animate.cc: Using an object's outermost container to determine range
	  for SFX attenuation instead of the object's own position. This fixes bug
	  #3600801 "Unlocking doors and chests missing click sound effect".
	Rev 7278
	* ./content/bgkeyring/src/items/orb_of_the_moons.uc: Fixed bug #3600802
	  "Orb of the Moons - teleport only avatar".
	Rev 7279
	* gamewin.cc, audio/Audio.*, audio/conv.*: Added song number conversion from
	  BG IDs to SI IDs, similar to what was in place for SFX. Fixed bug #3600800
	  "Snow weather effect missing sound effect" and bug #3600838 "Dungeon music
	  not playing upon entering". Also added weather track for rain (song 4).
	Rev 7280
	* mapedit/paledit.cc: Fixed assertion woes, as well as making empty palettes
	  show as all black instead of random colors.
	Rev 7282
	* objs/egg.cc: rand()%1 is always zero; changed to rand()%2.
	Rev 7283
	* files/utils.h, tools/wud.cc: WUD is no longer the unportable mess it was.
	  Eliminated warnings.
	Rev 7284
	* all: Eliminating warnings.
	Rev 7285
	* usecode/intrinsics.cc: Intrinsic path_run_usecode drags party members in
	  BG also (confirmed in originals).
	Rev 7286
	* content/bgkeyring/*: Fixing spellcasting AI by disabling it for the time
	  being. Updating Keyring readme.
	* docs/exult_intrinsics.txt: Updated with changes from quite a ways back.
	Rev 7288
	* combat.cc, gamewin.cc: Fixing bug #2782683 "Background music #10 never
	  played".